@@ -209,6 +209,10 @@
  '(ecb-method-face ((((class color) (background dark)) (:inherit ecb-default-highlight-face))))
  '(ecb-source-face ((((class color) (background dark)) (:inherit ecb-default-highlight-face))))
  '(ecb-token-header-face ((((class color) (background dark)) (:background "SeaGreen4"))))
+ '(font-latex-bold-face ((t (:inherit bold))))
+ '(font-latex-italic-face ((t (:inherit italic))))
+ '(font-latex-math-face ((((class color) (background dark)) (:inherit font-lock-number-face))))
+ '(font-latex-string-face ((((class color) (background dark)) (:inherit font-lock-string-face))))
  '(font-lock-builtin-face ((((class color) (min-colors 88) (background dark)) (:foreground "lightsteelblue"))))
  '(font-lock-comment-face ((((class color) (min-colors 88) (background dark)) (:foreground "gray"))))
  '(font-lock-floatnumber-face ((((class color) (background dark)) (:foreground "yellow4"))))
